--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "eslint": "^7.32.0 || ^8.2.0",
     "eslint-config-prettier": "^8.8.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "stylelint-config-prettier": "^9.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
@@ -24,6 +25,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "prettier": "2.8.7",
     "vite": "^4.2.0"
   }
 }
