--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "eslint": "^7.32.0 || ^8.2.0",
     "eslint-config-prettier": "^8.8.0",
+    "prop-type": "^0.0.1",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "stylelint-config-prettier": "^9.0.5"
