--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.60.0",
-    "stylelint-config-prettier": "^9.0.5"
+    "stylelint-config-prettier": "^9.0.5",
+    "vite": "^4.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
@@ -28,7 +29,6 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "prettier": "2.8.7",
-    "vite": "^4.2.1"
+    "prettier": "2.8.7"
   }
 }
